--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="app_name">FuLiCenter</string>
     <string name="Version_number_is_wrong">Version number is wrong</string>
     <string name="now_refresh">now_refresh</string>
-    <string name="no_more">没有跟多数据</string>
+    <string name="no_more">没有更多数据</string>
     <string name="load_more">加载更多数据</string>
 
     <!-- TODO: Remove or change this placeholder text -->
