--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -21,4 +21,6 @@
     <string name="register_success">注册成功</string>
     <string name="register_fail_exists">用户名已经存在</string>
     <string name="login">登录</string>
+    <string name="update_user_avatar_fail">update user avatar fail</string>
+    <string name="update_user_avatar_success">update user avatar success</string>
 </resources>
